# llm-structured-output-benchmarks

./: .gitignore  README.md  config.yaml  main.py  pyproject.toml
data/: function_calling.pkl  multilabel_classification.pkl  ner.pkl
data_sources/: data_models.py  generate_dataset.py
results/function_calling/: LMFormatEnforcerFramework.pkl  OutlinesFramework.pkl  PSEFramework.pkl
results/multilabel_classification/: LMFormatEnforcerFramework.pkl  OutlinesFramework.pkl  PSEFramework.pkl  VanillaOpenAIFramework.pkl
results/ner/: LMFormatEnforcerFramework.pkl  OutlinesFramework.pkl  PSEFramework.pkl
results/synthetic_data_generation/: LMFormatEnforcerFramework.pkl  OutlinesFramework.pkl  PSEFramework.pkl
src/: __init__.py  experiment.py  metrics.py
src/frameworks/: __init__.py  base.py  lm_format_enforcer_framework.py  metrics.py  outlines_framework.py  pse_framework.py
src/llm_structured_output_benchmarks.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
