[project]
name = "llm-structured-output-benchmarks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate",
    "datasets==3.0.0",
    "fructose",
    "fsspec==2024.6.1",
    "instructor",
    "llama-index",
    "loguru==0.7.2",
    "marvin",
    "mirascope==1.0.6",
    "modelsmith",
    "openai",
    "outlines",
    "plotly==5.22.0",
    "setuptools==75.1.0",
    "sentencepiece",
    "tabulate==0.9.0",
    "torch",
    "transformers",
    "typer==0.12.3",
    "pse",
    "httpx==0.27.2",
    "bitsandbytes"
]
